--- a/style.css
+++ b/style.css
@@ -2,3 +2,31 @@
     padding: 0%;
     margin: 0%;
 }
+
+.menu-container{
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+    padding: 15px;
+}
+
+.company-logo h1{
+    font-size: 35px;
+}
+.menu-item
+{
+    display: flex;
+}
+
+.menu-item li{
+    list-style: none;
+    margin: 5px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.menu-item li:hover{
+    color: blue;
+    cursor: pointer;
+}
